tests/ui/consts/issue-66693-panic-in-array-len.stderr
error: argument to `panic!()` in a const context must have type `&str`
  --> $DIR/issue-66693-panic-in-array-len.rs:6:20
   |
LL |     let _ = [0i32; panic!(2f32)];
   |                    ^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

